# filter_speed_of_light

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py  test_server.py
adapters/: inosmi_ru.py
charged_dict/: negative.txt
