[project]
name = "filter-speed-of-light"
version = "1.0.0"
description = "High-performance asynchronous article jaundice analyzer"
authors = [{name = "Senior Python Developer"}]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "pymorphy3>=2.0.0",
    "pymorphy3-dicts-ru>=2.4.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
